# convert_to_opus

./: README.md  convert_to_opus.sh  converter.py  main.py  main.spec  requirements.txt  setup.cfg  setup.py
.github/workflows/: python.yml
convert_to_opus/: __main__.py  main.py
src/: converter.py  main.py
