[metadata]
name = convert_to_opus
version = 0.6.0
author=D221
author_email=D221@airmail.cc
description=Python GUI program that converts directories of audio files to opus using ffmpeg
long_description = file: README.md
long_description_content_type = text/markdown
url=https://github.com/D221/convert_to_opus
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = convert_to_opus
install_requires =
    wxPython==4.1.1
[options.entry_points]
console_scripts =
    convert_to_opus=convert_to_opus.main:main